--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid footer">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-xs-5">
             <div class="row">
                 <ul>
                     <li>
@@ -14,7 +14,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-7">
             <h3>We on the web</h3>
             <p>
                 <a href="https://www.youtube.com/channel/UCXweXgoiLWD7ybJKQ4G2hUw" target="_blank">
@@ -38,7 +38,14 @@
             </p>
         </div>
     </div>
-    <div class="row text-center">
-        <p>&copy; 2020 Home & Car Services, author: <a href="mailto:bogdanpasterak@gmail.com" target="_blank"> Bogdan Pasterak </a></p>
+    <div class="row">
+        <p class="break-line text-center">
+            <span>
+                &copy; 2020 Home & Car Services
+            </span>
+            <span>
+                Author: <a href="mailto:bogdanpasterak@gmail.com" target="_blank"> Bogdan Pasterak </a>
+            </span>
+        </p>
     </div>
 </div>
