--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,60 +9,66 @@
             <img class="align-middle" src="assets/img/logo.svg" alt="logo">
         </div>
     </div>
-    <div class="row">
-        <div id="myCarousel" class="slideanim carousel slide text-center" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-                <li data-target="#myCarousel" data-slide-to="4"></li>
-            </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="assets/img/injectortesting.jpeg" alt="">
-                    <div class="carousel-caption">
-                        <h4>Injector testing</h4>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/engine.jpg" alt="">
-                    <div class="carousel-caption">
-                        <h4>Engine repairs</h4>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/jack.jpeg" alt="">
-                    <div class="carousel-caption">
-                        <h4>Pre-NCT and re-Test service</h4>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/tirechange.jpeg" alt="">
-                    <div class="carousel-caption">
-                        <h4>Wheel alignment</h4>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="assets/img/welding.jpeg" alt="">
-                    <div class="carousel-caption">
-                        <h4>Exhaust Welding & Service</h4>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+    <div *ngIf="(afAuth.user | async); else elseBlock">
+        <app-add-slide></app-add-slide>
     </div>
+    <ng-template #elseBlock>
+        <div class="row">
+            <div id="myCarousel" class="slideanim carousel slide text-center" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="assets/img/injectortesting.jpeg" alt="">
+                        <div class="carousel-caption">
+                            <h4>Injector testing</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/engine.jpg" alt="">
+                        <div class="carousel-caption">
+                            <h4>Engine repairs</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/jack.jpeg" alt="">
+                        <div class="carousel-caption">
+                            <h4>Pre-NCT and re-Test service</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/tirechange.jpeg" alt="">
+                        <div class="carousel-caption">
+                            <h4>Wheel alignment</h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="assets/img/welding.jpeg" alt="">
+                        <div class="carousel-caption">
+                            <h4>Exhaust Welding & Service</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </ng-template>
 </div>
