--- a/src/app/edit-slide/edit-slide.component.html
+++ b/src/app/edit-slide/edit-slide.component.html
@@ -1,1 +1,30 @@
-<p>edit-slide works!</p>
+<form [formGroup]="formTemplate" (submit)="onSubmit(formTemplate.value)">
+    <div class="col-sm-6">
+        <div class="row form-group text-center">
+            <img id="preview" [src]="imgSrc" alt="photo" (click)="fileUploader.click()">
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="form-group">
+            <label>Change Image</label>
+            <input type="file" accept="image/*" required class="form-control" formControlName="image" #fileUploader (change)="showPreview($event)">
+            <div class="text-danger" *ngIf="fC.image.invalid && submitted">Select photo file</div>
+        </div>
+
+        <div class="form-group">
+            <label>Description</label>
+            <input minlength="3" required class="form-control" formControlName="description" placeholder="Description">
+            <div class="text-danger" *ngIf="fC.description.invalid && submitted">Description is required.</div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <button class="btn btn-success btn-block" (click)="cancel()">Cancel</button>
+            </div>
+            <div class="col-xs-6">
+                <button type="submit" class="btn btn-danger btn-block">Ready</button>
+            </div>
+
+        </div>
+
+    </div>
+</form>
