--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
             <h4>Offering wide array of services from pre-NCT test to home maintenance and landscaping, we make sure that all your home and car needs can be dealt, with just one phone call.</h4><br>
             <p>We have been on the market since 2012</p>
         </div>
-        <div class="col-sm-5 slideanim vcenter">
+        <div class="col-sm-5 slideanim vcenter logo-frame">
             <img class="align-middle" src="assets/img/logo.svg" alt="logo">
         </div>
     </div>
