--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,6 +2,13 @@
     background-color: #dff;
 }
 
+.logo-frame {
+    box-shadow: 2px 5px 16px 0px #0B325E, 3px 5px 15px 5px rgba(0, 0, 0, 0);
+    padding: 5%;
+    border-top-left-radius: 30%;
+    border-bottom-right-radius: 30%;
+}
+
 @media (min-width: 768px) {
     .vcenter {
         display: inline-block;
@@ -16,6 +23,15 @@
 
 .item img {
     margin: 1.5em 0;
+}
+
+#myCarousel {
+    margin-top: 5%;
+}
+
+.carousel-inner {
+    max-width: 900px;
+    margin: auto;
 }
 
 @media (max-width: 769px) {
