--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -49,10 +49,9 @@
         </div>
 
         <div class="col-sm-10 text-center" id="mapcontainer">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2290.7390829994!2d-7.747636683960312!3d54.960137060311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTTCsDU3JzM2LjUiTiA3wrA0NCc0My42Ilc!5e0!3m2!1sen!2sie!4v1583527526984!5m2!1sen!2sie"
-                id="map" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9162.96341426953!2d-7.754123453294861!3d54.96010600546282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485f94b5d356d869%3A0x6955b21b1bd00694!2sBallyboe%20Glencar%2C%20Letterkenny%2C%20Co.%20Donegal%2C%20F92%20W660!5e0!3m2!1sen!2sie!4v1591353786666!5m2!1sen!2sie"
+                id="map" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
             </iframe>
-
         </div>
 
     </div>
