--- a/src/app/lielement/lielement.component.css
+++ b/src/app/lielement/lielement.component.css
@@ -2,15 +2,28 @@
     margin: 15px 10px;
     padding: 0 10px 5px;
     border-radius: 25px 0;
-    background-color: rgba(255, 238, 0, 0.4);
+    box-shadow: 1px 2px 8px 0px #0B325E, 2px 3px 8px 3px rgba(0, 0, 0, 0);
+    /* background-color: rgba(255, 238, 0, 0.4); */
 }
 
 h4 {
     display: inline-block;
-    padding-left: 6px;
-    letter-spacing: -0.6px;
+    padding-left: 4px;
+    letter-spacing: -0.7px;
 }
 
 .fas {
     font-size: 1.3em;
+}
+
+@media (max-width: 340px) {
+    h4 {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 300px) {
+    h4 {
+        font-size: 14px;
+    }
 }
